--- a/ui/styles/Home.module.css
+++ b/ui/styles/Home.module.css
@@ -25,12 +25,28 @@
 
 .main {
   min-height: 100vh;
-  padding: 1.2rem 0;
+  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.footer {
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .title a {
@@ -55,22 +71,115 @@
   text-align: center;
 }
 
-@media (max-width: 960px){
+.description {
+  margin: 4rem 0;
+  line-height: 1.5;
+  font-size: 1.0rem;
+}
 
-  .container{
-    padding: 0.2rem;
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+}
+
+.card {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 100%;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.logo {
+  height: 1em;
+  margin-left: 0.5rem;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
   }
+}
 
-  .title{
-    font-size: 30px;
-    padding-top: 3rem;
-    margin-bottom: -2rem;
+.greetingForm {
+  display: flex;
+  margin: 2rem;
+}
+
+.numberForm {
+  display: flex;
+  margin: 2rem;
+}
+
+.instructions {
+  font-size: 1rem !important;
+}
+
+@media (max-width: 760px){
+  .numberForm .input {
+    width: 63%;
+    height: 40px;
   }
+}
 
-  .description {
-    font-size: 23px;
-  }
+.input {
+  width: 70%;
+  height: 40px;
+}
 
+.button {
+  width: 30%;
+  height: 40px;
+  background: #0070f3;
+  border: none;
+  border-radius: 0px 7px 7px 0px;
+  color: white;
+  cursor: pointer;
+}
+
+.verifyButton {
+  width: 30%;
+  height: 40px;
+  background: #59a1f2;
+  border: none;
+  border-radius: 0px 7px 7px 0px;
+  color: white;
+  cursor: pointer;
 }
 
 /* spinner */
